--- a/app/src/main/res/drawable/img_kkt_user_selected.xml
+++ b/app/src/main/res/drawable/img_kkt_user_selected.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
         android:shape="oval">
     <solid
-            android:color="#32a1ef"/>
+            android:color="@color/colorPrimary"/>
 
     <padding
             android:left="7dp"
