--- a/app/src/main/res/drawable/img_kkt_user_unselected.xml
+++ b/app/src/main/res/drawable/img_kkt_user_unselected.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
         android:shape="oval">
     <solid
-            android:color="#8032a1ef"/>
+            android:color="@color/nik_inside_backgound_color"/>
 
     <padding
             android:left="7dp"
