--- a/app/src/main/res/layout/item_wait_room_user.xml
+++ b/app/src/main/res/layout/item_wait_room_user.xml
@@ -6,9 +6,20 @@
         android:orientation="vertical">
 
 
+
+    <ImageView
+        android:id="@+id/StarImgView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/img_star"
+        android:layout_marginTop="5dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/UserNameView"/>
+
     <TextView
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/StarImgView"
             android:layout_marginTop="5dp"
             android:layout_marginLeft="5dp"
             android:textSize="16dp"
