--- a/app/src/main/res/layout/layout_kungkungddagame.xml
+++ b/app/src/main/res/layout/layout_kungkungddagame.xml
@@ -1,176 +1,194 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".hunminGame.HunminGameFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".hunminGame.HunminGameFragment">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#EC686F">
-
-
-
-
-
-        <View
-                android:id="@+id/ChosungView"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="32dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="32dp"
-                android:background="#FFFFFF"
-                app:layout_constraintBottom_toTopOf="@+id/guideline"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/progressBar"
-                app:layout_constraintVertical_bias="0.0" />
-
-
-        <TextView
-                android:id="@+id/ChosungTextView"
-                android:layout_width="300dp"
-                android:layout_height="70dp"
-                android:background="#0A0A0A"
-                android:textAlignment="center"
-                android:textColor="#F7E24E"
-                android:textColorHighlight="#FFFFFF"
-                android:textColorHint="#F7E24E"
-                android:textSize="50sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@+id/ChosungView"
-                app:layout_constraintEnd_toEndOf="@+id/ChosungView"
-                app:layout_constraintStart_toStartOf="@+id/ChosungView"
-                app:layout_constraintTop_toTopOf="@+id/ChosungView"
-                app:layout_constraintVertical_bias="0.469" />
-
-        <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/GameLogRecyclerView"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                app:layout_constraintBottom_toTopOf="@+id/UserInputEditTextView"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/guideline"
-                app:layout_constraintVertical_bias="1.0"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                />
-
-        <EditText
-                android:id="@+id/UserInputEditTextView"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="60dp"
-                android:ems="10"
-                android:hint="@string/hunminGame_hint"
-                android:inputType="textPersonName"
-                android:textColorHint="#FFFFFF"
-
-
-                android:textSize="24sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent" />
-
-        <ImageView
-                android:id="@+id/AnswerImageView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/img_game_answer"
-                android:visibility="gone"
-                app:layout_constraintBottom_toBottomOf="@+id/GameLogRecyclerView"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.501"
-                app:layout_constraintStart_toStartOf="@+id/GameLogRecyclerView"
-                app:layout_constraintTop_toTopOf="@+id/GameLogRecyclerView"
-                app:layout_constraintVertical_bias="0.498" />
-
-        <ImageView
-                android:id="@+id/WrongImageView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/img_game_wrong"
-                android:visibility="gone"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.501"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/GameLogRecyclerView"
-                app:layout_constraintVertical_bias="0.498" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/nik_inside_backgound_color">
 
 
         <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                app:layout_constraintGuide_begin="288dp" />
+            android:id="@+id/guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_begin="288dp" />
 
         <ProgressBar
-                android:id="@+id/TimerProgressBar"
-                style="?android:attr/progressBarStyleHorizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="16dp"
-                android:background="#F2FE53"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+            android:id="@+id/TimerProgressBar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="16dp"
+            android:background="#ffffff"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-                android:visibility="invisible"
-                android:background="@drawable/img_kkt_user_selected"
-                android:id="@+id/Order1TextView"
-                android:textColor="#000000"
-                android:textSize="20dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                app:layout_constraintVertical_bias="0.2"
-                app:layout_constraintHorizontal_bias="0.2"/>
+            android:id="@+id/Order1TextView"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/img_kkt_user_selected"
+            android:gravity="center"
+            android:textColor="#ffffff"
+            android:textSize="20dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.1"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.15" />
 
         <TextView
-                android:visibility="invisible"
-                android:background="@drawable/img_kkt_user_unselected"
-                android:id="@+id/Order2TextView"
-                android:textColor="#000000"
-                android:textSize="20dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                app:layout_constraintVertical_bias="0.2"
-                app:layout_constraintHorizontal_bias="0.5"/>
+            android:id="@+id/Order2TextView"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/img_kkt_user_unselected"
+            android:gravity="center"
+            android:textColor="#ffffff"
+            android:textSize="20dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.15" />
 
         <TextView
-                android:visibility="invisible"
-                android:background="@drawable/img_kkt_user_unselected"
-                android:id="@+id/Order3TextView"
-                android:textColor="#000000"
-                android:textSize="20dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                app:layout_constraintVertical_bias="0.2"
-                app:layout_constraintHorizontal_bias="0.8"/>
+            android:id="@+id/Order3TextView"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/img_kkt_user_unselected"
+            android:gravity="center"
+            android:textColor="#ffffff"
+            android:textSize="20dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.9"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.15" />
+
+
+        <View
+            android:id="@+id/ChosungView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="32dp"
+            android:background="#FFFFFF"
+            app:layout_constraintBottom_toTopOf="@+id/guideline"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/progressBar"
+            app:layout_constraintVertical_bias="0.0" />
+
+
+        <TextView
+            android:id="@+id/ChosungTextView"
+            android:layout_width="300dp"
+            android:layout_height="70dp"
+            android:background="@color/wait_room_btn"
+            android:textAlignment="center"
+            android:textColor="#000000"
+            android:textColorHighlight="#000000"
+            android:textColorHint="#000000"
+            android:textSize="50sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/ChosungView"
+            app:layout_constraintEnd_toEndOf="@+id/ChosungView"
+            app:layout_constraintStart_toStartOf="@+id/ChosungView"
+            app:layout_constraintTop_toTopOf="@+id/ChosungView"
+            app:layout_constraintVertical_bias="0.469" />
+
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/LogGuideLine"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.6" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/GameLogRecyclerView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="#a3a1a1"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toTopOf="@+id/UserInputEditTextView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/LogGuideLine"
+            app:layout_constraintVertical_bias="1.0" />
+
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/EditTextGuideLine"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.92" />
+
+        <EditText
+            android:id="@+id/UserInputEditTextView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/background_game_edit_text"
+            android:ems="10"
+            android:hint="@string/hunminGame_hint"
+            android:inputType="textPersonName"
+            android:textColorHint="#000000"
+            android:textSize="22dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/EditTextGuideLine"
+            app:layout_constraintVertical_bias="1" />
+
+        <ImageView
+            android:id="@+id/AnswerImageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/img_game_answer"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.501"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.35" />
+
+        <ImageView
+            android:id="@+id/WrongImageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/img_game_wrong"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.501"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.35" />
+
 
 
 
