방장 여부에 따라 훈민정음 게임 시작

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -44,6 +44,9 @@
         <argument
                 android:name="iTime"
                 app:argType="integer" />
+        <argument
+                android:name="bIsMaster"
+                app:argType="boolean" />
         <!--        <argument android:name="User"-->
         <!--                app:argType="com.wlswnwns.chosung_android.waitRoom.WaitRoomModel.Users[]"/>-->
     </fragment>
