백스페이스 컨트롤 시도

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -80,6 +80,9 @@
         <argument
                 android:name="game"
                 app:argType="com.wlswnwns.chosung_android.item.Game" />
+        <action
+                android:id="@+id/action_waitRoomFragment_to_mainFragment"
+                app:destination="@id/mainFragment" />
 
     </fragment>
     <fragment
