쿵쿵따 결과화면

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -117,7 +117,9 @@
     <fragment
             android:id="@+id/kungKungDdaGameOverFragment"
             android:name="com.wlswnwns.chosung_android.KungKungDdaGameOver.KungKungDdaGameOverFragment"
-            android:label="KungKungDdaGameOverFragment" />
+            android:label="KungKungDdaGameOverFragment" >
+        <argument android:name="NickName" />
+    </fragment>
 
 
 </navigation>
